--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -139,47 +139,41 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "configs = [\n",
-    "    #\"scaife2021mirabest.cfg\", # Fully Evaluated\n",
-    "    #\"scaife2021mirabest-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"scaife2021mirabest-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    #\"scaife2021mingo.cfg\", # Fully Evaluated\n",
-    "    #\"scaife2021mingo-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"scaife2021mingo-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    \n",
-    "    #\"bowles2021mirabest.cfg\", # Fully Evaluated\n",
-    "    #\"bowles2021mirabest-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"bowles2021mirabest-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    #\"bowles2021mingo.cfg\", # Fully Evaluated\n",
-    "    #\"bowles2021mingo-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"bowles2021mingo-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    \n",
-    "    #\"e2attentionmirabest.cfg\", # Fully Evaluated\n",
-    "    #\"e2attentionmirabest-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"e2attentionmirabest-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    #\"e2attentionmingo.cfg\", # Fully Evaluated\n",
-    "    #\"e2attentionmingo-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"e2attentionmingo-RestrictedAug.cfg\", # Fully Evaluated\n",
-    "    \n",
-    "    #\"5kernel_e2attentionmirabest.cfg\",\n",
-    "    #\"5kernel_e2attentionmirabest-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"5kernel_e2attentionmirabest-RestrictedAug.cfg\",\n",
-    "    #\"5kernel_e2attentionmingo.cfg\",\n",
-    "    #\"5kernel_e2attentionmingo-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"5kernel_e2attentionmingo-RestrictedAug.cfg\",\n",
-    "    \n",
-    "    #\"7kernel_e2attentionmirabest.cfg\",\n",
-    "    #\"7kernel_e2attentionmirabest-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"7kernel_e2attentionmirabest-RestrictedAug.cfg\",\n",
-    "    #\"7kernel_e2attentionmingo.cfg\",\n",
-    "    #\"7kernel_e2attentionmingo-RandAug.cfg\", # Fully Evaluated\n",
-    "    #\"7kernel_e2attentionmingo-RestrictedAug.cfg\",\n",
-    "    \n",
-    "    #\"C4_attention_mirabest.cfg\", # Fully Evaluted to: '/raid/scratch/mbowles/EquivariantSelfAttention/models/e2attention/mirabest/fisher/'\n",
-    "    #\"C8_attention_mirabest.cfg\", # Fully Evaluted to: '/raid/scratch/mbowles/EquivariantSelfAttention/models/e2attention/mirabest/fisher/'\n",
-    "    #\"C16_attention_mirabest.cfg\", # Fully Evaluted to: '/raid/scratch/mbowles/EquivariantSelfAttention/models/e2attention/mirabest/fisher/'\n",
-    "    #\"D4_attention_mirabest.cfg\", # Fully Evaluted to: '/raid/scratch/mbowles/EquivariantSelfAttention/models/e2attention/mirabest/fisher/'\n",
-    "    \"D8_attention_mirabest.cfg\", # Fully Evaluted to: '/raid/scratch/mbowles/EquivariantSelfAttention/models/e2attention/mirabest/fisher/'\n",
-    "    #\"D16_attention_mirabest.cfg\",\n",
+    "    # Model Testing\n",
+    "    \"5kernel_bowles2021_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_scaife2021_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_D16_scaife2021_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_C4_attention_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_C8_attention_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_C16_attention_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_D4_attention_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_D8_attention_mirabest_RandAug.cfg\",\n",
+    "    \"5kernel_D16_attention_mirabest_RandAug.cfg\",\n",
+    "    #\n",
+    "    # Kernel Testing\n",
+    "    #5kernel_bowles2021_mirabest-RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    #5kernel_scaife2021_mirabest_RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    #5kernel_D8_attention_mirabest-RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    \"7kernel_bowles2021_mirabest_RandAug.cfg\",\n",
+    "    \"7kernel_scaife2021_mirabest_RandAug.cfg\",\n",
+    "    \"7kernel_D8_attention_mirabest_RandAug.cfg\",\n",
+    "    \"9kernel_bowles2021_mirabest_RandAug.cfg\",\n",
+    "    \"9kernel_scaife2021_mirabest_RandAug.cfg\",\n",
+    "    \"9kernel_D8_attention_mirabest_RandAug.cfg\",\n",
+    "    #\n",
+    "    # Data set Testing\n",
+    "    #5kernel_bowles2021_mirabest_RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    #5kernel_scaife2021_mirabest_RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    #5kernel_D8_attention_mirabest_RandAug.cfg # Already trained in 'Model Testing'\n",
+    "    \"5kernel_bowles2021_mirabestconf_RandAug.cfg\",\n",
+    "    \"5kernel_scaife2021_mirabestconf_RandAug.cfg\",\n",
+    "    \"5kernel_D8_attention_mirabestconf_RandAug.cfg\",\n",
+    "    \"5kernel_bowles2021_mingolotss_RandAug.cfg\",\n",
+    "    \"5kernel_scaife2021_mingolotss_RandAug.cfg\",\n",
+    "    \"5kernel_D8_attention_mingolotss_RandAug.cfg\",\n",
+    "    \"5kernel_bowles2021_rmnist_RandAug.cfg\",\n",
+    "    \"5kernel_scaife2021_rmnist_RandAug.cfg\",\n",
+    "    \"5kernel_D8_attention_rmnist_RandAug.cfg\"\n",
     "]\n",
     "\n",
     "data_configs = [\n",
@@ -191,7 +185,7 @@
     "    \"random rotation\",\n",
     "    #\"restricted random rotation\"\n",
     "]\n",
-    "\n",
+    "configs = con[]\n",
     "for cfg in configs:\n",
     "    print(cfg)\n",
     "    config = ConfigParser.ConfigParser(allow_no_value=True)\n",
@@ -261,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
