--- a/generalisation_plots.ipynb
+++ b/generalisation_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "second-continuity",
+   "id": "bacterial-reason",
    "metadata": {
     "tags": []
    },
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "registered-length",
+   "id": "convertible-delay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "general-cleaners",
+   "id": "temporal-class",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "raised-sailing",
+   "id": "thirty-coast",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "delayed-reset",
+   "id": "complete-application",
    "metadata": {},
    "source": [
     "# Rank and Fisher Rao Norm Plots"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "underlying-distribution",
+   "id": "electronic-confidence",
    "metadata": {},
    "outputs": [
     {
@@ -105,9 +105,12 @@
     "Fishers = []\n",
     "Ranks = []\n",
     "RaoNorm = []\n",
+    "\n",
     "for i in range(len(Models)):\n",
     "    Rank = []\n",
+    "    Norms = []\n",
     "    Fishers.append(pickle.load(open(f\"models/e2attention/mirabest/fisher/{Models[i]}/fishers.p\",'rb')))\n",
+    "    RaoNorm.append(pickle.load(open(f\"models/e2attention/mirabest/fisher/{Models[i]}/raonorm.p\",'rb')))\n",
     "#Calculate the Rank manually\n",
     "    with torch.no_grad():\n",
     "        for fisher in Fishers[i]:\n",
@@ -122,8 +125,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "grateful-possession",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3f7aa3e558da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mModels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRaoNorm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('disk I/O error')).History will not be written to the database.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    for i in range(len(Models)):\n",
+    "        plt.hist(RaoNorm[i])\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "heard-element",
+   "id": "faced-apache",
    "metadata": {},
    "outputs": [],
    "source": []
