Fisher information and Rao Norm are now pickled every 1000 iterations

--- a/fisher_example.ipynb
+++ b/fisher_example.ipynb
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "Fishers, Rank, FR= CalcFIM(net, train_loader, 10, outputsize)"
+    "Fishers, Rank, FR= CalcFIM(net, train_loader, 10, outputsize, workingdir)"
    ]
   },
   {
